[workspace]
members = ["cyclonedds", "cyclonedds-sys", "cyclonedds-macros"]
resolver = "3"

[workspace.package]
version = "0.0.4"
edition = "2024"
homepage = "https://cyclonedds.io/"
repository = "https://github.com/eclipse-cyclonedds/cyclonedds-rust"
license = "EPL-2.0 OR BSD-3-Clause"
authors = ["Troy Karan Harrison <troy.harrison@zettascale.tech>"]

[workspace.dependencies]
eclipse-cyclonedds-sys = { version = "0.0.4", path = "cyclonedds-sys" }
eclipse-cyclonedds-macros = { version = "0.0.4", path = "cyclonedds-macros" }

[workspace.metadata.crane]
name = "eclipse-cyclonedds"

[workspace.lints.rust]
# begin-sorted start
future_incompatible = "warn"
keyword_idents = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
nonstandard_style = "warn"
noop_method_call = "warn"
rust_2018_idioms = "warn"
unexpected_cfgs = "warn"
unsafe_code = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
# begin-sorted end

[workspace.lints.clippy]
# begin-sorted start
all = "warn"
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
cognitive_complexity = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
doc_paragraphs_missing_punctuation = "warn"
empty_docs = "warn"
empty_enums = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
exit = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
expl_impl_clone_on_copy = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
float_cmp = "warn"
float_equality_without_abs = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
indexing_slicing = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
match_wild_err_arm = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
missing_const_for_fn = "warn"
missing_enforced_import_renames = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
mod_module_files = "warn"
mutex_integer = "warn"
mut_mut = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_if_let_else = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
pedantic = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
suspicious_operation_groupings = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
# undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unseparated_literal_suffix = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
# begin-sorted end
