[package]
name = "eclipse-cyclonedds-sys"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "cyclonedds_sys"

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
