[package]
name = "eclipse-cyclonedds-sys"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "Raw FFI Bindings for Eclipse Cyclone DDS"
categories = [
  "automotive",
  "external-ffi-bindings",
  "network-programming",
  "science::robotics",
]

[lib]
name = "cyclonedds_sys"

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
cmake = { version = "0.1.58", optional = true }
filetime = { version = "0.2.29", optional = true }
tempfile = { version = "3.27.0", optional = true }

[features]
vendored = ["dep:cmake", "dep:tempfile", "dep:filetime"]

[package.metadata.docs.rs]
features = ["vendored"]
