[package]
name = "cyclonedds"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bitflags = "2.10.0"
byteorder = "1.5.0"
cdr-encoding = "0.10.2"
cyclonedds-sys = { path = "../cyclonedds-sys" }
cyclonedds-derive = { path = "../cyclonedds-derive" }
md-5 = "0.10.6"
serde = "1.0.228"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4"] }

[features]
internal = []
