[package]
name = "eclipse-cyclonedds"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "cyclonedds"

[dependencies]
eclipse-cyclonedds-sys = { workspace = true }
eclipse-cyclonedds-macros = { workspace = true }
bitflags = "2.10.0"
byteorder = "1.5.0"
cdr-encoding = "0.10.2"
serde = "1.0.228"
md-5 = "0.11.0"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4"] }

[features]
vendored = ["eclipse-cyclonedds-sys/vendored"]
internal = []

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["vendored"]
